# chat

./: Cargo.toml  README.md  preferences.json
src/: main.rs
src/backend/: database.rs
src/database/: database.rs
src/llms/: api.rs
src/openai/: api.rs
src/utils/: getenv.rs  locals.rs  mod.rs  queries.rs
