[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
crossterm = "0.28.1"
libsql = { version = "*", default-features = false, features = [
    "core",
    "replication",
    "remote",
] }
ratatui = "0.29.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tui-textarea = "0.7.0"
